--- a/ansible/playbooks/avail-full-node.yml
+++ b/ansible/playbooks/avail-full-node.yml
@@ -27,14 +27,14 @@
         sudo apt install git-all -y
       register: result_git_install
 
-    # - name: Kill any apt-get or dpkg processes
-    #   shell: |
-    #     pids=$(pgrep -f 'apt-get|dpkg')
-    #     if [ -n "$pids" ]; then
-    #       sudo kill -9 $pids
-    #     fi
-    #   args:
-    #     executable: /bin/bash
+    - name: Kill any apt-get or dpkg processes
+      shell: |
+        pids=$(pgrep -f 'apt-get|dpkg')
+        if [ -n "$pids" ]; then
+          sudo kill -9 $pids
+        fi
+      args:
+        executable: /bin/bash
 
 
     - name: Install required packages
