fix rust install and loki promtail

--- a/ansible/playbooks/loki/promtail.yml
+++ b/ansible/playbooks/loki/promtail.yml
@@ -2,14 +2,17 @@ server:
   http_listen_port: 9080
   grpc_listen_port: 0
   log_level: info
+
 positions:
   filename: /var/lib/promtail/positions.yaml
+
 clients:
   - url: 'http://localhost:3100/loki/api/v1/push'
     backoff_config:
       min_period: 1m
       max_period: 1h
       max_retries: 10000
+
 scrape_configs:
   - job_name: journald
     journal:
@@ -26,8 +29,7 @@ scrape_configs:
                 max_lines: 2500
             - regex:
                 expression: >-
-                  (?P<date>\d{4}-\d{2}-\d{2}
-                  \d{2}:\d{2}:\d{2}\.\d{3})\s+(?P<level>(TRACE|DEBUG|INFO|WARN|ERROR))\s+(?P<worker>([^\s]+))\s+(?P<target>[\w-]+):?:?(?P<subtarget>[\w-]+)?:[\s]?(?P<chaintype>\[[\w-]+\]+)?[\s]?(?P<message>.+)
+                  (?P<date>\d{4}-\d{2}-\d{2} \d{2}:\d{2}:\d{2}\.\d{3})\s+(?P<level>(TRACE|DEBUG|INFO|WARN|ERROR))\s+(?P<worker>([^\s]+))\s+(?P<target>[\w-]+):?:?(?P<subtarget>[\w-]+)?:[\s]?(?P<chaintype>\[[\w-]+\]+)?[\s]?(?P<message>.+)
             - labels:
                 level: null
                 target: null
@@ -35,7 +37,7 @@ scrape_configs:
             - metrics:
                 log_lines_total:
                   type: Counter
-                  Description: Total Number of Chain Logs
+                  description: Total Number of Chain Logs
                   prefix: promtail_chain_
                   max_idle_duration: 24h
                   config:
@@ -50,7 +52,7 @@ scrape_configs:
             - metrics:
                 log_lines_total:
                   type: Counter
-                  Description: Total Number of Chain Error Logs
+                  description: Total Number of Chain Error Logs
                   prefix: promtail_chain_error_
                   max_idle_duration: 24h
                   config:
@@ -65,35 +67,30 @@ scrape_configs:
             - metrics:
                 log_lines_total:
                   type: Counter
-                  Description: Total Number of Chain Panic Logs
+                  description: Total Number of Chain Panic Logs
                   prefix: promtail_chain_panic_
                   max_idle_duration: 24h
                   config:
                     match_all: true
                     action: inc
     relabel_configs:
-      - source_labels:
-          - __journal__systemd_unit
+      - source_labels: ['__journal__systemd_unit']
         target_label: unit
-      - source_labels:
-          - unit
-        regex: (.*.scope|user.*.service)
+      - source_labels: ['unit']
+        regex: (.*\.scope|user.*\.service)
         action: drop
-      - source_labels:
-          - __journal__hostname
+      - source_labels: ['__journal__hostname']
         target_label: host
       - action: replace
-        source_labels:
-          - __journal__cmdline
-          - __journal__hostname
-        separator: ;
+        source_labels: ['__journal__cmdline', '__journal__hostname']
+        separator: ';'
         regex: .*--chain.*;(.*)
         target_label: node
         replacement: $1
+
   - job_name: blockchain_node
     static_configs:
-      - targets:
-          - localhost
+      - targets: ['localhost']
         labels:
           job: blockchain_node
           __path__: /home/logs/node/node.log
@@ -106,7 +103,8 @@ scrape_configs:
                 max_lines: 1000
             - regex:
                 expression: >-
-                  (?P<timestamp>\d{4}-\d{2}-\d{2}
-                  \d{2}:\d{2}:\d{2})\s+(?P<message>.*)
-            - labels: null
-              timestamp: message
+                  (?P<timestamp>\d{4}-\d{2}-\d{2} \d{2}:\d{2}:\d{2})\s+(?P<message>.*)
+            - labels:
+                level: null
+                target: null
+                subtarget: null
