--- a/ansible/playbooks/avail-full-node.yml
+++ b/ansible/playbooks/avail-full-node.yml
@@ -27,16 +27,6 @@
         sudo apt install git-all -y
       register: result_git_install
 
-    - name: Kill any apt-get or dpkg processes
-      shell: |
-        pids=$(pgrep -f 'apt-get|dpkg')
-        if [ -n "$pids" ]; then
-          sudo kill -9 $pids
-        fi
-      args:
-        executable: /bin/bash
-
-
     - name: Install required packages
       apt:
         name:
@@ -55,67 +45,112 @@
         state: present
         update_cache: yes
 
-    - name: Install and configure Rust
+    - name: Download and run rustup installation script
+      shell: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+      args:
+        executable: /bin/bash
+
+    - name: Ensure Cargo environment is sourced in .bashrc
       shell: |
-        # Download rustup installation script
-        curl https://sh.rustup.rs -o /tmp/rustup-init.sh
-        chmod +x /tmp/rustup-init.sh
-
-        # Run rustup installation script
-        /tmp/rustup-init.sh -y
-
-        # Ensure Cargo environment is sourced in .bashrc
-        if ! grep -q 'source \$HOME/.cargo/env' ~/.bashrc; then
-          echo 'source \$HOME/.cargo/env' >> ~/.bashrc
+        if ! grep -q 'source $HOME/.cargo/env' ~/.bashrc; then
+          echo 'source $HOME/.cargo/env' >> ~/.bashrc
         fi
+      args:
+        executable: /bin/bash
 
-        # Source the Cargo environment
-        source \$HOME/.cargo/env
+    - name: Export Cargo bin to PATH and source the Cargo environment
+      shell: |
+        export PATH=$HOME/.cargo/bin:$PATH
+        source $HOME/.cargo/env
+      args:
+        executable: /bin/bash
 
-        # Verify Rust installation
-        rustc_version=\$(rustc --version)
-        echo "Rust version: \$rustc_version"
+    - name: Verify Rust installation
+      shell: |
+        export PATH=$HOME/.cargo/bin:$PATH
+        source $HOME/.cargo/env
+        rustc --version
+      register: rustc_version_output
+      args:
+        executable: /bin/bash
 
-        # Set Rust to default stable
+    - debug:
+        msg: "Rust version: {{ rustc_version_output.stdout }}"
+
+    - name: Set Rust to default stable
+      shell: |
+        export PATH=$HOME/.cargo/bin:$PATH
+        source $HOME/.cargo/env
         rustup default stable
+      args:
+        executable: /bin/bash
 
-        # Update Rust toolchain
+    - name: Update Rust toolchain
+      shell: |
+        export PATH=$HOME/.cargo/bin:$PATH
+        source $HOME/.cargo/env
         rustup update
+      args:
+        executable: /bin/bash
 
-        # Update nightly Rust toolchain
+    - name: Update nightly Rust toolchain
+      shell: |
+        export PATH=$HOME/.cargo/bin:$PATH
+        source $HOME/.cargo/env
         rustup update nightly
+      args:
+        executable: /bin/bash
 
-        # Add nightly WebAssembly target
+    - name: Add nightly WebAssembly target
+      shell: |
+        export PATH=$HOME/.cargo/bin:$PATH
+        source $HOME/.cargo/env
         rustup target add wasm32-unknown-unknown --toolchain nightly
+      args:
+        executable: /bin/bash
 
-        # Verify Rust toolchain
-        rustup_show=\$(rustup show)
-        echo "\$rustup_show"
+    - name: Verify Rust toolchain
+      shell: |
+        export PATH=$HOME/.cargo/bin:$PATH
+        source $HOME/.cargo/env
+        rustup show
+      register: rustup_show_output
+      args:
+        executable: /bin/bash
 
-        # Verify nightly Rust toolchain
-        rustup_nightly_show=\$(rustup +nightly show)
-        echo "\$rustup_nightly_show"
-      register: rust_install_output
+    - debug:
+        msg: "{{ rustup_show_output.stdout }}"
+
+    - name: Verify nightly Rust toolchain
+      shell: |
+        export PATH=$HOME/.cargo/bin:$PATH
+        source $HOME/.cargo/env
+        rustup +nightly show
+      register: rustup_nightly_show_output
+      args:
+        executable: /bin/bash
+
+    - debug:
+        msg: "{{ rustup_nightly_show_output.stdout }}"
+
 
     - name: Print Rust installation output
       debug:
         var: rust_install_output.stdout_lines
 
-    - name: Check if Rust is available
+    - name: Verify Rust installation
       shell: |
-        source \$HOME/.cargo/env
-        if command -v rustc >/dev/null 2>&1; then
-          echo "Rust is available"
-        else
-          echo "Rust is not available"
-          exit 1
-        fi
-      register: rust_check_output
+        export PATH=$HOME/.cargo/bin:$PATH
+        . $HOME/.cargo/env
+        rustc --version
+      register: rustc_version_output
+      args:
+        executable: /bin/bash
 
-    - name: Print Rust check output
+    - name: Print Rust installation version
       debug:
-        var: rust_check_output.stdout_lines
-
+        msg: "Rust version: {{ rustc_version_output.stdout }}"
+    
     - name: Install and Start Prometheus
       shell: |
         cd /tmp
@@ -214,53 +249,58 @@
         sudo systemctl status node_exporter
       register: result_node_exporter_install
 
-    - name: Install and Configure Loki
-      shell: |
-        set -e
+    - name: Add Grafana GPG key
+      apt_key:
+        url: https://apt.grafana.com/gpg.key
+        state: present
 
-        # Change to the temporary directory
-        cd /tmp
+    - name: Add Grafana APT repository
+      apt_repository:
+        repo: "deb https://apt.grafana.com stable main"
+        state: present
 
-        # Download and unzip Loki
-        wget https://github.com/grafana/loki/releases/download/v2.5.0/loki-linux-amd64.zip
-        unzip loki-linux-amd64.zip
+    - name: Update APT package list
+      apt:
+        update_cache: yes
 
-        # Move the binary to the appropriate directory
-        sudo mv loki-linux-amd64 /usr/local/bin/loki
-        sudo chmod +x /usr/local/bin/loki
-        rm -f loki-linux-amd64.zip
+    - name: Install Loki and Promtail
+      apt:
+        name:
+          - loki
+          - promtail
+        state: present
 
-        # Create Loki user and directories
-        sudo useradd --system --no-create-home --shell /bin/false loki
-        sudo mkdir -p /etc/loki
-        sudo chown loki:loki /etc/loki
+    - name: Create loki group
+      group:
+        name: loki
+        state: present
 
-        # Create the systemd service file
-        sudo bash -c 'cat <<EOL > /etc/systemd/system/loki.service
-        [Unit]
-        Description=Loki Service
-        After=network.target
+    - name: Create loki user
+      user:
+        name: loki
+        group: loki
+        system: yes
+        create_home: no
 
-        [Service]
-        User=loki
-        Group=loki
-        ExecStart=/usr/local/bin/loki -config.file /etc/loki/loki.yml
-        Restart=on-failure
+    - name: Create promtail group
+      group:
+        name: promtail
+        state: present
 
-        [Install]
-        WantedBy=multi-user.target
-        EOL'
+    - name: Create promtail user
+      user:
+        name: promtail
+        group: promtail
+        system: yes
+        create_home: no
 
-        # Reload systemd to apply the new service file
-        sudo systemctl daemon-reload
-
-        # Enable and start the Loki service
-        sudo systemctl enable loki
-        sleep 7
-        sudo systemctl start loki
-      args:
-        executable: /bin/bash
-
+    - name: Create Loki configuration directory
+      file:
+        path: /etc/loki
+        state: directory
+        owner: loki
+        group: loki
+        mode: '0755'
 
     - name: Copy Loki configuration file
       copy:
@@ -268,73 +308,45 @@
         dest: /etc/loki/loki.yml
         owner: loki
         group: loki
-    
-    - name: Restart Loki service
-      systemd:
-        name: loki
-        state: restarted
+        mode: '0644'
+      notify: Restart Loki
 
-    - name: Install and Configure Promtail
-      shell: |
-        set -e
-
-        # Change to the temporary directory
-        cd /tmp
-
-        # Download and unzip Promtail
-        wget https://github.com/grafana/loki/releases/download/v2.5.0/promtail-linux-amd64.zip
-        unzip promtail-linux-amd64.zip
-
-        # Move the binary to the appropriate directory
-        sudo mv promtail-linux-amd64 /usr/local/bin/promtail
-        sudo chmod +x /usr/local/bin/promtail
-        rm -f promtail-linux-amd64.zip
-
-        # Create Promtail user and directories
-        sudo useradd --system --no-create-home --shell /bin/false promtail
-        sudo mkdir -p /etc/promtail
-        sudo mkdir -p /var/lib/promtail
-        sudo chown promtail:promtail /etc/promtail
-        sudo chown promtail:promtail /var/lib/promtail
-
-        # Create the systemd service file
-        sudo bash -c 'cat <<EOL > /etc/systemd/system/promtail.service
-        [Unit]
-        Description=Promtail Service
-        After=network.target
-
-        [Service]
-        User=promtail
-        Group=promtail
-        ExecStart=/usr/local/bin/promtail -config.file /etc/promtail/promtail.yml
-        Restart=on-failure
-
-        [Install]
-        WantedBy=multi-user.target
-        EOL'
-
-        # Reload systemd to apply the new service file
-        sudo systemctl daemon-reload
-
-        # Enable and start the Promtail service
-        sudo systemctl enable promtail
-        sleep 7
-        sudo systemctl start promtail
-      args:
-        executable: /bin/bash
-
+    - name: Create Promtail configuration directory
+      file:
+        path: /etc/promtail
+        state: directory
+        owner: promtail
+        group: promtail
+        mode: '0755'
 
     - name: Copy Promtail configuration file
       copy:
         src: loki/promtail.yml
-        dest: /etc/promtail/promtail.yml
+        dest: /etc/promtail/config.yml
         owner: promtail
         group: promtail
+        mode: '0644'
+      notify: Restart Promtail
 
-    - name: Restart Promtail service
+    - name: Ensure correct permissions on Promtail positions file directory
+      file:
+        path: /var/lib/promtail
+        state: directory
+        owner: promtail
+        group: promtail
+        mode: '0755'
+
+    - name: Restart Loki
+      systemd:
+        name: loki
+        state: restarted
+        enabled: yes
+
+    - name: Restart Promtail
       systemd:
         name: promtail
         state: restarted
+        enabled: yes
 
     - name: Install Grafana
       shell: |
