ssm bucket bug fix

--- a/ansible/playbooks/avail-full-node.yml
+++ b/ansible/playbooks/avail-full-node.yml
@@ -10,11 +10,15 @@
     ansible_shell_executable: /bin/bash
     ansible_connection: aws_ssm
     ansible_aws_ssm_profile: default
-    ansible_aws_ssm_bucket_name: avail-node-aws-ssm-connection-playbook
+    ansible_aws_ssm_bucket_name: "{{ ssm_bucket_name }}"
     ansible_aws_ssm_region: "eu-west-1"
   tasks:
     - name: pinging
       ping:
+
+    - name: Display SSM bucket name [Generated]
+      debug:
+        msg: "SSM bucket name is {{ ansible_aws_ssm_bucket_name }}"
 
     - name: Update and Upgrade
       shell: |
